--- a/styles.css
+++ b/styles.css
@@ -135,10 +135,11 @@
   /* Mobile Menu */
 
   .mobile-menu {
+    width: 100%;
     padding: 24px;
     position: absolute;
     top: 40px;
-    left: 00px;
+    left: 0px;
     background-color: var(--white);
   }
   .mobile-menu a {
@@ -169,7 +170,7 @@
 
   /* Shopping cart detail */
 
-  .product-detail {
+  .product-detail, .aside-product-detail {
     width: 360px;
     padding: 24px;
     box-sizing: border-box;
@@ -264,30 +265,90 @@
     border-radius: 20px;
     object-fit: cover;
   }
-  .product-info {
+  .product-card .product-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 12px;
   }
-  .product-info figure {
+  .product-card .product-info figure {
     margin: 0;
   }
-  .product-info figure img {
+  .product-card .product-info figure img {
     width: 35px;
     height: 35px;
   }
-  .product-info div p:nth-child(1) {
+  .product-card .product-info div p:nth-child(1) {
     font-weight: bold;
     font-size: var(--md);
     margin-top: 0;
     margin-bottom: 4px;
   }
-  .product-info div p:nth-child(2) {
+  .product-card .product-info div p:nth-child(2) {
     font-size: var(--sm);
     margin-top: 0;
     margin-bottom: 0;
     color: var(--very-light-pink);
+  }
+
+  /* Product Detail Aside */
+
+  .product-detail-close {
+    background: var(--white);
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: 2;
+    padding: 12px;
+    border-radius: 50%;
+  }
+  .product-detail-close:hover {
+    cursor: pointer;
+  }
+  .aside-product-detail > img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+  }
+  .aside-product-detail .product-info {
+    margin: 24px 24px 0 24px;
+  }
+  .aside-product-detail .product-info p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+  }
+  .aside-product-detail .product-info p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 36px;
+  }
+  .aside-product-detail .product-info p:nth-child(3) {
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 36px;
+  }
+  .primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+  }
+  .add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
  
   /* Media Querys */
@@ -317,6 +378,7 @@
   @media (max-width: 640px) {
     .product-detail {
       width: 100%;
+      background-color: var(--white);
     }
   }
 
@@ -331,6 +393,14 @@
     .product-card img {
       width: 140px;
       height: 140px;
+    }
+  }
+
+  /* Aside product detail */
+  @media (max-width: 640px) {
+    .aside-product-detail {
+      width: 100%;
+      background-color: var(--white);
     }
   }
 
